# NeuroFlag

./: .editorconfig  .gitignore  .npmrc  AGENTS.md  README.md  idea-notes.md  neuroflag.spec  norms.json  norms.json.template  package-lock.json  package.json  pyproject.toml  requirements.txt  run.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
app/: __init__.py  main.py
app/config/: __init__.py  settings.py
app/domain/: __init__.py  algorithm.py  amplitude.py  cell_layout.py  channels.py  eeg_file.py  errors.py  norms.py  patient_identification.py  pipeline.py  signal_amplitude.py  types.py
app/presentation/: __init__.py  rag_colors.py
app/reports/: pdf_generator.py
app/static/: index.html
app/storage/: __init__.py  history.py
app/ui/: app_window.py  bug_report.py  context_copy.py  exception_hooks.py  info_content.py  navigation.py  password_settings_dialog.py  session_lock_dialog.py  theme.py  unlock_dialog.py
context/foundation/: distribution.md  health-check.md  lessons.md  prd.md  roadmap.md  shape-notes.md  stack-assessment.md  test-plan.md
docs/: EEG-segmentacja.md  README-norms.md
scripts/: calibrate_against_expert_csv.py  compare_amplitude_methods.py  diagnose_patient_files.py
tests/: conftest.py  test_app_endpoints.py  test_imports.py
tests/fixtures/: MANUAL-QA.md  calibration_mini.csv  generate_digitrack_fixture.py  generate_test_edfs.py  probe_pipeline.py  sample_digitrack.eeg
tests/integration/: test_pipeline_fidelity.py
tests/unit/: run_pdf_test.py  test_algorithm.py  test_algorithm_real_norms.py  (+25 more)
(+134 files in other folders)
